--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,30 @@
-.menu {
+#bar {
     list-style-type: none;
     overflow: auto;
+    background-color: #696969;
+    vertical-align: text-bottom;
 }
 
-.menu li {
-    float: left;
+li {
     padding: 2px;
+    width: 71px;
+    height: 75px;
+    font-size: 20px;
+
+}
+
+li a {
+    text-decoration: none;
+    color: white;
+}
+
+li a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+li:hover {
+
+    background-color: black;
+
 }
