--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,9 @@
-#bar {
+.menu {
     list-style-type: none;
     overflow: auto;
-    background-color: #696969;
-    vertical-align: text-bottom;
 }
 
-li {
+.menu li {
+    float: left;
     padding: 2px;
-    width: 71px;
-    height: 75px;
-    font-size: 20px;
-
-}
-
-li a {
-    text-decoration: none;
-    color: white;
-}
-
-li a:hover {
-    color: white;
-    text-decoration: none;
-}
-
-li:hover {
-
-    background-color: black;
-
 }
