GBOOK-24: Add individual book page.

--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,11 @@
     display: none;
 }
 
+.book-description {
+    width: 62%;
+    text-align: justify;
+}
+
+.book-rating {
+    margin-top: 50px;
+}
