GBOOK-20: Add validation/submit handler for admin search form.

--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,11 @@
     display: none;
 }
 
+.icon {
+    max-width: 50px;
+    max-height: 100px;
+}
+
+#admin-book-table td {
+    text-align: center;
+}
